src/objects/AMS_ChangeCodes__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_status_change__c</fullName>
        <label>Account status change</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Model__c</fullName>
        <description>Accreditation Model</description>
        <inlineHelpText>Accreditation Model</inlineHelpText>
        <label>Accreditation Model</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apply_to_hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply to hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Location_Class__c</fullName>
        <description>Location Class To include if the Change code is Billable
Possible values - &apos;A&apos;,&apos;C&apos;,&apos;D&apos;,&apos;E&apos;,&apos;G&apos;,&apos;I&apos;,&apos;K&apos;,&apos;M&apos;,&apos;N&apos;,&apos;O&apos;,&apos;P&apos;,&apos;Q&apos;,&apos;R&apos;,&apos;S&apos;,&apos;T&apos;,&apos;V&apos;,&apos;X&apos;,&apos;J&apos;
Values must be Separated by &quot;;&quot;</description>
        <inlineHelpText>Location Class To include if the Change code is Billable
Possible values - &apos;A&apos;,&apos;C&apos;,&apos;D&apos;,&apos;E&apos;,&apos;G&apos;,&apos;I&apos;,&apos;K&apos;,&apos;M&apos;,&apos;N&apos;,&apos;O&apos;,&apos;P&apos;,&apos;Q&apos;,&apos;R&apos;,&apos;S&apos;,&apos;T&apos;,&apos;V&apos;,&apos;X&apos;,&apos;J&apos;
Values must be Separated by &quot;;&quot;</inlineHelpText>
        <label>Billable Location Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>sets the change code to be sent for external systems for the emission of a sales order</description>
        <inlineHelpText>sets the change code to be sent for external systems for the emission of a sales order</inlineHelpText>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bulletin_Memo_Text2__c</fullName>
        <description>Because of possible length of bulletin memo text, it is broke down into multiple fields</description>
        <label>Bulletin Memo Text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulletin_Memo_Text3__c</fullName>
        <description>Because of possible length of bulletin memo text, it is broke down into multiple fields</description>
        <label>Bulletin Memo Text3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulletin_Memo_Text__c</fullName>
        <label>Bulletin Memo Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CNS_Bulletin_Memo_Text2__c</fullName>
        <label>CNS Bulletin Memo Text2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_Bulletin_Memo_Text3__c</fullName>
        <label>CNS Bulletin Memo Text3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNS_Bulletin_Memo_Text__c</fullName>
        <label>CNS Bulletin Memo Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_BG_to_HO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Defines if bank guarantee should be calculated and presented for this change code.</inlineHelpText>
        <label>Calculate BG to HO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_End_Grace_Period_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked End of Grace Period will be displayed on eBulletin</inlineHelpText>
        <label>Calculate End Grace Period Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Outstanding_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the Outstanding Amount column on eBulletin report will display a value</description>
        <inlineHelpText>If checked the Outstanding Amount column on eBulletin report will display a value</inlineHelpText>
        <label>Calculate Outstanding Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculate_Termination_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Termination Date field on Change Code will be populated</description>
        <inlineHelpText>If checked, Termination Date field on Change Code will be populated</inlineHelpText>
        <label>Calculate Termination Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Code__c</fullName>
        <label>Change Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <description>List of class type for which the change code has to be generated</description>
        <label>Class Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clear_Expiry_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Expiry Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Clear_Irregularities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clear Irregularities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_memo_text_for_HO__c</fullName>
        <description>Message to be added to memo text if Account is Parent and has active childs</description>
        <inlineHelpText>Message to be added to memo text if Account is Parent and has active childs</inlineHelpText>
        <label>Extra memo text for HO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1Values__c</fullName>
        <description>Values to check on the first field</description>
        <label>Field1Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <description>API Name of the first field to check</description>
        <label>Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2Values__c</fullName>
        <description>Values to check on the second field</description>
        <label>Field2Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <description>Second field to check</description>
        <label>Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3Values__c</fullName>
        <description>Values to check on the third field</description>
        <label>Field3Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <description>Third field to check</description>
        <label>Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generate_Irregularity_Sequence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked the irregularity sequence will be displayed on eBulletin</inlineHelpText>
        <label>Generate Irregularity Sequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_RecId__c</fullName>
        <description>Value for RecId on the Integration process with SAP PI, 3 possible values: A (Addition), C (Change) and D (Termination)</description>
        <label>Integration RecId</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_HO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by change code applicable to the whole hierarchy. If true, only the HO will get the change code published, otherwise the whole hierarchy will.</inlineHelpText>
        <label>Publish HO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published_in_bulletin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the default value on the change code when generated</description>
        <label>Published in bulletin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Code_Description__c</fullName>
        <label>Reason Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <label>Reason Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>Used to filter the action based on the recordtype of the case that is generating the change code.</description>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_ChangeCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if change code relates to risk management</description>
        <label>Risk ChangeCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Agency_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the change code should or should not be picked by the DPC integration</description>
        <label>Skip Agency Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Used_By_CNS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If false, means the change code is not generated for CNS agencies</description>
        <inlineHelpText>If false, means the change code is not generated for CNS agencies</inlineHelpText>
        <label>Used By CNS</label>
        <type>Checkbox</type>
    </fields>
    <label>AMS Change Codes</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Published_in_bulletin__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>Field7__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Clear_Irregularities__c</columns>
        <columns>Risk_ChangeCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AMS_Billable_CC</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Billable__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Integration_RecId__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>SETUP_TYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billable__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AMS Billable CC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_NOT</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Billable__c</columns>
        <columns>Billable_Location_Class__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Integration_RecId__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>SDR</value>
        </filters>
        <label>AMS_NOT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AMS_debug</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Change_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Integration_RecId__c</columns>
        <columns>Billable__c</columns>
        <columns>Billable_Location_Class__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bulletin_Memo_Text__c</field>
            <operation>contains</operation>
            <value>IN PROCESS</value>
        </filters>
        <filters>
            <field>Used_By_CNS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Change_Code__c</field>
            <operation>notEqual</operation>
            <value>NEW,CTB</value>
        </filters>
        <label>AMS_debug</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CASS_Import</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Published_in_bulletin__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Field1__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>Field7__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Clear_Irregularities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Type__c</field>
            <operation>contains</operation>
            <value>I</value>
        </filters>
        <label>CASS Import</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CNS</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Published_in_bulletin__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Calculate_Outstanding_Amount__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Billable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Used_By_CNS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CNS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CNS_JG</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Bulletin_Memo_Text2__c</columns>
        <columns>Bulletin_Memo_Text3__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_status_change__c</field>
            <operation>equals</operation>
        </filters>
        <label>CNS_JG</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Irregularities</fullName>
        <columns>Change_Code__c</columns>
        <columns>NAME</columns>
        <columns>Risk_ChangeCode__c</columns>
        <columns>Clear_Irregularities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>REI</value>
        </filters>
        <label>Irregularities</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NewGen</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>ANG</value>
        </filters>
        <label>NewGen</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Not_Applicable_to_CNS</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Billable__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Integration_RecId__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Billable_Location_Class__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Used_By_CNS__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Not Applicable to CNS</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>RVW_Change_Code</fullName>
        <columns>Class_Type__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Field2__c</columns>
        <columns>Field2Values__c</columns>
        <columns>Field3__c</columns>
        <columns>Field3Values__c</columns>
        <columns>Field4__c</columns>
        <columns>Field4Values__c</columns>
        <columns>Field5__c</columns>
        <columns>Field5Values__c</columns>
        <columns>Field6__c</columns>
        <columns>Field6Values__c</columns>
        <columns>Accreditation_Model__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>RVW</value>
        </filters>
        <label>RVW Change Code</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Risk_Change_Code_R4</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Calculate_Outstanding_Amount__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Accreditation_Model__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Risk_ChangeCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Risk Change Code (R4)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Risk_Change_Code_R4_NOT</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Record_Type__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Account_status_change__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Reason_Code_Description__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Calculate_Outstanding_Amount__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Risk_ChangeCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Change_Code__c</field>
            <operation>equals</operation>
            <value>NOT</value>
        </filters>
        <label>Risk Change Code (R4) - NOT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SIDRA_ALL</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Bulletin_Memo_Text__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Field2__c</columns>
        <columns>Field2Values__c</columns>
        <columns>Field3__c</columns>
        <columns>Field3Values__c</columns>
        <columns>Field4__c</columns>
        <columns>Field4Values__c</columns>
        <columns>Field5__c</columns>
        <columns>Account_status_change__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>SIDRA</value>
        </filters>
        <label>SIDRA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SIDRA_Lite</fullName>
        <columns>NAME</columns>
        <columns>Change_Code__c</columns>
        <columns>Class_Type__c</columns>
        <columns>Reason_Code__c</columns>
        <columns>Field1__c</columns>
        <columns>Field1Values__c</columns>
        <columns>Field2__c</columns>
        <columns>Field2Values__c</columns>
        <columns>Field3__c</columns>
        <columns>Field3Values__c</columns>
        <columns>Field4__c</columns>
        <columns>Field4Values__c</columns>
        <columns>Field5__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>SIDRA_Lite</value>
        </filters>
        <label>SIDRALite</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>